fully convert move recipes to vanilla-like datapack things